<resources>
    <string name="app_name">GLAU FireAuth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Application specific strings-->
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="profile_preferences">Profile Preferences</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="profile_1">Profile 1</string>
    <string name="profile_2">Profile 2</string>
    <string name="profile_3">Profile 3</string>
    <string name="about_app_desc">GLAU FireAuth lets you enjoy continuous internet connectivity without any further need to authenticate on Fortinet repeatedly.</string>
    <string name="dev_by">Developed by:- <b>Karan Balani</b></string>
    <string name="let_s_get_social_with_the_dev">Let\'s get social with the dev ;)</string>
    <string name="coded_with_for_glau">Coded with 🔥 + 🧠 for GLAU</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="rate_the_app_on_play_store">Rate the app on Play Store</string>
    <string name="having_problems">Having Problems?</string>
    <string name="service_getting_killed_randomly">Service getting killed randomly?</string>
    <string name="service_killed_help_desc">Some of the devices might not allow the service to run all the time due to background computation restrictions by manufacturers, for instance you may white list the app from <b>Settings > Battery > Battery Optimization > \'Don\'t Optimize this app\'</b> \n\n OR\n</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="this_cannot_be_empty">This cannot be empty</string>
    <string name="secret_1">javascript:(function() {</string>
    <string name="secret_2">var form = document.forms[0];</string>
    <string name="secret_3">var usr = form.elements[3];</string>
    <string name="secret_4">var pass = form.elements[4];</string>
    <string name="secret_5">var con = form.elements[5];</string>
    <string name="secret_6">usr.value = \'</string>
    <string name="secret_7">\' ;</string>
    <string name="secret_8">pass.value = \'</string>
    <string name="secret_9">\' ;</string>
    <string name="secret_10">con.click();</string>
    <string name="secret_11">})()</string>
    <string name="login_url_glau">http://172.16.10.20:1000/login?011abaee7cf9a5fc</string>
    <string name="personal_information">Personal Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="powered_by">powered by</string>
    <string name="evening_technologies">Evening Technologies</string>
    <string name="glau_fireauth_logo">glau_fireauth_logo</string>
    <string name="linkedin_url">LinkedIn Url</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="instagram_url">Instagram Url</string>
    <string name="active">Active</string>
    <string name="status">Status:</string>
    <string name="inactive">Inactive</string>
    <string name="toggle_the_service_using_the_switch_above">Toggle the service using the switch above.</string>
    <string name="caution_message"><b>Please note</b>\n• Keep the Mobile Data off while using this app!\n• Turn off Battery Optimization for this App!</string>
    <string name="version">version</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_privacy_policy">View Privacy Policy</string>
    <string name="github_url">GitHub Url</string>
    <string name="notification_info_text">• Having trouble? Try logging in again!\n• Keep the mobile data off!\n• Turn off Battery Optimization for this app!\n• Please read the troubleshooting section for more help!</string>
    <string name="click_to_open_battery_optimization_settings">CLICK TO OPEN BATTERY OPTIMIZATION SETTINGS</string>
    <string name="click_here_to_find_out_how_to_turn_off_battery_optimization_on_your_device">Click here to find out, \'How to Turn off Battery Optimization on your device\'.</string>
    <string name="github_repository_link">GitHub Repository Link</string>
    <string name="source_code">Source code</string>
</resources>
