<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <LinearLayout
        android:id="@+id/eveTechLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8sp"
            android:contentDescription="@string/evening_technologies"
            android:src="@drawable/evetech_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/evening_technologies"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/dividerViewA"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/eveTechLinearLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#bdbdbd" />

    <LinearLayout
        android:id="@+id/glauFireAuthLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerViewA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/web_hi_res_512" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/aboutAppDecsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/glauFireAuthLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:text="@string/about_app_desc"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/devByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutAppDecsTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/dev_by"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/devByTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/let_s_get_social_with_the_dev"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/githubLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/github_url"
                android:padding="8dp"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/linkedInLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/linkedin_url"
                android:padding="8dp"
                android:src="@drawable/ic_linkedin" />

            <ImageView
                android:id="@+id/facebookLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/facebook_url"
                android:padding="8dp"
                android:src="@drawable/ic_facebook" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:text="@string/coded_with_for_glau"
        android:textAlignment="center" />

</RelativeLayout>