<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/status"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/statusInfoActiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textColor="#64dd17"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/statusInfoInactiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/inactive"
        android:textAllCaps="true"
        android:textColor="#d50000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.polyak.iconswitch.IconSwitch
        android:id="@+id/serviceIconSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:isw_default_selection="left"
        app:isw_icon_left="@drawable/ic_cancel"
        app:isw_icon_right="@drawable/ic_check"
        app:isw_icon_size="30dp"
        app:isw_inactive_tint_icon_left="#d50000"
        app:isw_inactive_tint_icon_right="#64dd17"
        app:isw_thumb_color_left="#d50000"
        app:isw_thumb_color_right="#64dd17" />

    <TextView
        android:id="@+id/switchInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceIconSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/toggle_the_service_using_the_switch_above" />

    <TextView
        android:id="@+id/gotoBatterySettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchInfoTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:textColor="@color/hyperLinkText"
        android:text="@string/click_to_open_battery_optimization_settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:text="@string/caution_message"
        android:textAlignment="center" />


</RelativeLayout>