<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".activities.InitialSetupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/initialSetupToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/initialSetupPageHeadingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_setup"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/initialSetupScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/initialSetupDoneButton"
        android:layout_below="@id/initialSetupToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_information"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initialSetupTextInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <EditText
                    android:id="@+id/initialSetupNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:hint="@string/name"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:lines="1"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/profile_1"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initialSetupTextInputLayoutUserName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <EditText
                    android:id="@+id/initialSetupUserName1EditText"
                    android:layout_width="match_parent"
                    android:autofillHints="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text|textVisiblePassword"
                    android:lines="1"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initialSetupTextInputLayoutPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="8dp">

                <EditText
                    android:id="@+id/initialSetupPassword1EditText"
                    android:layout_width="match_parent"
                    android:autofillHints="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/initialSetupDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/accent"
        android:text="@string/proceed" />

</RelativeLayout>